--- a/OpenXml_/OpenXml_.csproj
+++ b/OpenXml_/OpenXml_.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ZipHelper\ZipHelper.csproj">
+      <Project>{666f2053-10e4-4ae8-ad41-972388e86425}</Project>
+      <Name>ZipHelper</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
